<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>4_wheel_autonomous_robot</name>
  <version>1.1.0</version>
  <description>4 wheel autonomous robot from BMW - URDF implementation with xacros using macros</description>
  <maintainer email="antonios.saliba1@gmail.com">antoniossaliba</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>